# vibe-doc-markdown

./: .gitignore  main.py  pyproject.toml
docs/: api-usage.md  backend-implementation-comparison.md  doc-pdf-to-markdown-tools-report.md
openspec/changes/archive/2026-05-24-doc-pdf-markdown-tools-report/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-24-doc-pdf-markdown-tools-report/specs/multi-backend/: spec.md
openspec/specs/convert-document/: spec.md
outputs/: agent_harness_docling.md  agent_harness_markitdown.md  agent_harness_pdfplumber.md  agent_memory_docling.md  agent_memory_markitdown.md  agent_memory_pdfplumber.md  cooper_docx_docling.md  cooper_docx_markitdown.md  cooper_docx_pandoc.md  docling.md  marker.md  markitdown.md  pdfplumber.md
src/vibe_doc_markdown/: __init__.py  converter.py  types.py
src/vibe_doc_markdown/backends/: __init__.py  adaptable.py  base.py  docling.py  marker.py  markitdown.py  pandoc.py  pdfplumber.py
tests/: conftest.py  test_all_backends.py  test_converter.py
