[project]
name = "vibe-doc-markdown"
version = "0.1.0"
description = "Universal document to Markdown converter with multi-backend support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "docling>=2.95.0",
  "marker-pdf>=1.8",
  "markitdown>=0.1.5",
  "pdfplumber>=0.11.9",
  "pypandoc-binary>=1.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: slow tests that use real backends and PDF files"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_doc_markdown"]
